tests/baselines/reference/topLevelAwaitErrors.3(module=es2022).errors.txt
topLevelAwaitErrors.3.ts(4,6): error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.


==== topLevelAwaitErrors.3.ts (1 errors) ====
    export {};
    
    // reparse binding pattern as await should fail
    var {await} = {await:1};
         ~~~~~
!!! error TS1359: Identifier expected. 'await' is a reserved word that cannot be used here.
    